# synthscript

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/: BuiltinFunctions.h  Error.h  Lexer.h  Operators.h  Parser.h  Reader.h  Tokens.h  built_in_functions.h  error.h  error_manager.h  lexer.h  operators.h  parser.h  reader.h  tokens.h
include/AST/: ASTNode.h  ASTNodes.h  AST_node.h  AST_nodes.h  NodeForwardClasses.h  ProgramNode.h  VisitFunctionsMacro.h  error_node.h  node_forward_classes.h  program_node.h  visit_functions_macro.h
include/AST/Operators/: BinOpNode.h  CastOpNode.h  SubscriptOpNode.h  UnaryOpNode.h
include/AST/Statement/: CompoundStatementNode.h
include/AST/Statement/Array/: ArrayDeclarationStatementNode.h  ArrayLiteralNode.h  RangeLiteralNode.h
include/AST/Statement/Assignment/: AssignmentNode.h  CompoundAssignmentNode.h  DeclarationNode.h  InitializationNode.h
include/AST/Statement/Control/: BreakStatementNode.h  ContinueStatementNode.h  ForStatementNode.h  IfStatementNode.h  RepeatStatementNode.h  ReturnStatementNode.h  WhileStatementNode.h
include/AST/Statement/Function/: FunctionDeclarationNode.h  FunctionStatementNode.h
include/AST/Terminals/: IdentifierNode.h  LiteralNode.h
include/AST/operators/: bin_op_node.h  call_node.h  call_op_node.h  cast_op_node.h  subscript_op_node.h  unary_op_node.h
include/AST/statement/: compound_statement_node.h
include/AST/statement/array/: array_literal_node.h  range_literal_node.h
include/AST/statement/assignment/: assignment_node.h
include/AST/statement/control/: break_statement_node.h  continue_statement_node.h  for_statement_node.h  if_statement_node.h  repeat_statement_node.h  return_statement_node.h  while_statement_node.h
include/AST/statement/function/: function_declaration_node.h  function_statement_node.h
include/AST/terminals/: identifier_node.h  literal_node.h
include/Object/: ArrayObject.h  BoolObject.h  FloatObject.h  FunctionObject.h  IntObject.h  Object.h  StringObject.h  VoidObject.h
include/Symbol/: Symbol.h  SymbolTable.h
include/Types/: Types.h
include/Visitor/: InterpreterVisitor.h  PrintVisitor.h  SemanticAnalysisVisitor.h  Visitor.h
include/object/: array_object.h  bool_object.h  float_object.h  function_object.h  int_object.h  object.h  string_object.h  void_object.h
include/symbol/: symbol.h  symbol_table.h
include/types/: types.h
include/visitor/: interpreter_visitor.h  print_visitor.h  semantic_analysis_visitor.h  visitor.h
src/: BuiltinFunctions.cpp  CMakeLists.txt  Error.cpp  Lexer.cpp  Parser.cpp  Reader.cpp  built_in_functions.cpp  error.cpp  error_manager.cpp  lexer.cpp  main.cpp  operators.cpp  parser.cpp  reader.cpp
src/Object/: ArrayObject.cpp  BoolObject.cpp  FloatObject.cpp  FunctionObject.cpp  IntObject.cpp  StringObject.cpp  VoidObject.cpp
src/Symbol/: SymbolTable.cpp
src/Visitor/: InterpreterVisitor.cpp  PrintVisitor.cpp  SemanticAnalysisVisitor.cpp
src/object/: array_object.cpp  bool_object.cpp  float_object.cpp  function_object.cpp  int_object.cpp  string_object.cpp  void_object.cpp
src/symbol/: symbol.cpp  symbol_table.cpp
src/types/: types.cpp
src/visitor/: interpreter_visitor.cpp  print_visitor.cpp  semantic_analysis_visitor.cpp
tests/: CMakeLists.txt  test_error_manager.cpp  test_lexer.cpp  test_parser.cpp  test_reader.cpp
tests/utils/: cout_redirect.cpp  cout_redirect.h  shortcuts.cpp  shortcuts.h  stream_redirect.cpp  stream_redirect.h  temp_file.cpp  temp_file.h  test_cout_redirect.cpp  test_output_utils.h  test_stream_redirect.cpp  test_temp_file.cpp
tests/visitor/: test_interpreter_visitor.cpp  test_semantic_analysis_visitor.cpp
