cmake_minimum_required(VERSION 3.26)
project(SynthScript)

set(CMAKE_CXX_STANDARD 17)
include_directories(include)

add_executable(SynthScript src/main.cpp
        src/Reader.cpp
        include/Reader.h
        src/Lexer.cpp
        include/Lexer.h
        include/Tokens.h
        src/Error.cpp
        include/Error.h
        include/AST/Operators/BinOpNode.h
        include/AST/Operators/CastOpNode.h
        include/AST/Operators/SubscriptOpNode.h
        include/AST/Operators/UnaryOpNode.h
        include/AST/Statement/Assignment/AssignmentNode.h
        include/AST/Statement/Control/BreakStatementNode.h
        include/AST/Statement/Control/ContinueStatementNode.h
        include/AST/Statement/Control/ForStatementNode.h
        include/AST/Statement/Control/IfStatementNode.h
        include/AST/Statement/Control/ReturnStatementNode.h
        include/AST/Statement/Control/WhileStatementNode.h
        include/AST/Statement/Function/FunctionDeclarationNode.h
        include/AST/Statement/Function/FunctionStatementNode.h
        include/AST/Statement/CompoundStatementNode.h
        include/AST/Terminals/IdentifierNode.h
        include/AST/Terminals/LiteralNode.h
        include/AST/ASTNode.h
        include/AST/ASTNodes.h
        include/AST/NodeForwardClasses.h
        include/AST/ProgramNode.h
        include/AST/VisitFunctionsMacro.h
        include/Types/Types.h
        src/Parser.cpp
        include/Parser.h
        include/AST/Statement/Array/ArrayLiteralNode.h
        include/Visitor/Visitor.h
        include/Visitor/PrintVisitor.h
        src/Visitor/PrintVisitor.cpp
        include/Object/Object.h
        include/Symbol/Symbol.h
        include/Symbol/SymbolTable.h
        src/Symbol/SymbolTable.cpp
        include/Visitor/SemanticAnalysisVisitor.h
        src/Visitor/SemanticAnalysisVisitor.cpp
        include/Object/FunctionObject.h
        include/Visitor/InterpreterVisitor.h
        src/Visitor/InterpreterVisitor.cpp
        src/Object/FunctionObject.cpp
        include/Operators.h
        include/Object/IntObject.h
        src/Object/IntObject.cpp
        include/Object/FloatObject.h
        include/Object/BoolObject.h
        include/Object/StringObject.h
        src/Object/FloatObject.cpp
        src/Object/StringObject.cpp
        include/Object/ArrayObject.h
        src/Object/ArrayObject.cpp
        src/Object/BoolObject.cpp
        include/Object/VoidObject.h
        src/Object/VoidObject.cpp
        include/BuiltinFunctions.h
        src/BuiltinFunctions.cpp
        include/AST/Statement/Array/RangeLiteralNode.h
)
